--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
     <div class="container">
       <h1>🚀 Zaheer's DevOps Project #1</h1>
       <p>Welcome to my first AWS EC2 deployed website!</p>
-      <a href="https://github.com/RBZAHEER/DevOps1" target="_blank" class="btn"
-        >🔗 View on GitHub</a
-      >
+
+      <a href="https://github.com/RBZAHEER/DevOps1" target="_blank" class="btn">
+        🔗 View on GitHub
+      </a>
+
+      <!-- Add the centered GIF below the GitHub link -->
+      <div class="gif-container">
+        <img
+          src="https://media.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif"
+          alt="Deployment GIF"
+          class="gif"
+        />
+      </div>
     </div>
   </body>
 </html>
